# golinks

./: .envrc.tpl  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2020-05-21-040633_create_routes/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
