[package]
name = "golinks"
version = "0.1.0"
authors = ["Thomas Willingham <thomas@willinghamdigital.com>"]
edition = "2018"

[dependencies]
diesel = "1.4.4"
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "diesel_sqlite_pool"]
